[tool.uv]
package = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.uv.workspace]
members = [
  "packages/br_tester",
  "packages/br_cli",
  "packages/demos",
]

[tool.uv.sources]
br_tester = { workspace = true }
br_cli = { workspace = true }
br_common = { workspace = true }
demos = { workspace = true }

[tool.ruff]
line-length = 119
select = ["E", "F", "I"]
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = [
  "packages/br_tester/src",
  "packages/br_common/src",
  "packages/br_cli/src",
  "packages/demos/src"
]

