[tool.uv]
package = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.uv.workspace]
members = [
  "packages/br_sdk",
  "packages/br_cli",
  "packages/br_gui",
  "packages/demos",
]

[tool.uv.sources]
br_sdk = { workspace = true }
br_cli = { workspace = true }
br_gui = { workspace = true }
demos = { workspace = true }

[tool.ruff]
line-length = 119
select = ["E", "F", "I"]
target-version = "py312"
exclude = [
  "_grpc"
]

[tool.pytest.ini_options]
pythonpath = [
  "packages/br_sdk/src",
  "packages/br_cli/src",
  "packages/br_gui/src",
  "packages/demos/src"
]

