[tool.uv]
package = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.uv.workspace]
members = [
  "packages/br_sdk",
  "packages/br_agent",
  "packages/br_cli",
  "packages/br_gui",
  "packages/br_hw",
  "packages/demos",
  "packages/anybotics",
]

[tool.uv.sources]
br_sdk = { workspace = true }
br_agent = { workspace = true }
br_cli = { workspace = true }
br_gui = { workspace = true }
br_hw = { workspace = true }
demos = { workspace = true }
anybotics = { workspace = true }

[tool.ruff]
line-length = 119
select = ["E", "F", "I"]
target-version = "py312"
exclude = [
  "_grpc"
]

[tool.pytest.ini_options]
pythonpath = [
  "packages/br_sdk/src",
  "packages/br_agent/src",
  "packages/br_cli/src",
  "packages/br_gui/src",
  "packages/br_hw/src",
  "packages/demos/src"
]

